Feature User Profile
- New info added to profile
- New endpoint for changing password
